# inkwell

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
backend/: inkwell_backend_entry.py  pyproject.toml
backend/inkwell/: __init__.py  pdf_engine.py  server.py
backend/tests/: test_pdf_engine.py  test_server_requests.py
docs/adr/: 0001-use-pdf4qt-native-core.md  0002-fork-acp-ui-for-agent-panel.md
docs/architecture/: markdown-notes-and-agent-handoff.md  native-core-and-packaging-roadmap.md  native-pdf-bridge-protocol.md  native-shell-target.md  pdf-operation-bridge.md
docs/research/: acp-ui-spike-2026-07-08.md  pdf4qt-spike-2026-07-08.md
docs/roadmap/: pdfgear-parity-todo.md
docs/superpowers/specs/: 2026-07-08-sparrow-shell-design.md
electron/: agent.ts  agentSplitRanges.ts  agentToolEvents.ts  backendProcessPath.ts  main.ts  nativePdfBridge.ts  nativePdfHostPath.ts  nativeShellPath.ts  preload.ts  tsconfig.json
native/inkwell-shell/: CMakeLists.txt
native/inkwell-shell/cmake/: AddPdf4QtGui.cmake
native/inkwell-shell/src/: inkwell_agent_bridge.cpp  inkwell_agent_bridge.h  inkwell_main_window.cpp  inkwell_main_window.h  inkwell_pdf_bridge.cpp  inkwell_pdf_bridge.h  main.cpp
native/pdf4qt-host/: CMakeLists.txt  README.md
native/pdf4qt-host/cmake/: AddPdf4QtCore.cmake
native/pdf4qt-host/src/: main.cpp  pdf4qt_adapter.cpp  pdf4qt_adapter.h
samples/forms/: README.md
scripts/: bundle-backend.mjs  configure-native-host.mjs  configure-native-shell.mjs  dev-server.mjs  generate-sample-form.py  install-native-deps.mjs  native-doctor.mjs  run-tests.mjs  stage-native-host.mjs  stage-native-shell.mjs
shared/: agent-types.ts  native-pdf-commands.ts  native-pdf-core.ts
src/: App.tsx  agentControls.ts  agentPrompts.ts  aiBrush.ts  chatComposerState.ts  chatScroll.ts  commandRouter.ts  devElectronApi.ts  documentAnalysis.ts  index.css  main.tsx  nativeAgentHostApi.ts  nativeSidePanel.ts  pageOperations.ts  pdfCoordinates.ts  pdfFileActions.ts  pdfHighlights.ts  pdfOperationBridge.ts  pdfPlacementMode.ts  pdfRanges.ts  pdfToolResults.ts  privacy.ts  researchContext.ts  sessionExport.ts  skillCatalog.ts  workspaceContext.ts  workspaceFiles.ts  workspaceMerge.ts
src/components/: AgentLogo.tsx  ChatPanel.css  ChatPanel.tsx  ErrorBoundary.tsx  PdfViewer.tsx  SparrowMark.tsx
src/types/: electron-api.d.ts
tests/: agentControls.test.ts  agentPdfTools.test.ts  agentPrompts.test.ts  agentSplitRanges.test.ts  agentToolEvents.test.ts  aiBrush.test.ts  backendBundleScaffold.test.ts  backendProcessPath.test.ts  chatComposerState.test.ts  chatPanelAgentSelector.test.ts  chatScroll.test.ts  commandRouter.test.ts  devElectronApi.test.ts  documentAnalysis.test.ts  layoutScroll.test.ts  nativeAgentHostApi.test.ts  nativePdfBridge.test.ts  nativePdfCommands.test.ts  nativePdfCore.test.ts  nativePdfHostPath.test.ts  nativePdfHostScaffold.test.ts  nativeShellPath.test.ts  nativeShellScaffold.test.ts  nativeSidePanel.test.ts  packageConfig.test.ts  pageOperations.test.ts  pageOrganizationUi.test.ts  pdfCoordinates.test.ts  pdfFileActions.test.ts  pdfHighlights.test.ts  pdfOperationBridge.test.ts  pdfPlacementMode.test.ts  pdfRanges.test.ts  pdfToolResults.test.ts  pdfViewerInteraction.test.ts  pdfgearParityTodo.test.ts  privacy.test.ts  researchContext.test.ts  sessionExport.test.ts  skillCatalog.test.ts  (+3 more)
