[project]
name = "inkwell"
version = "0.1.0"
description = "Inkwell PDF execution backend"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pymupdf>=1.24.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
